# dalaran

./: README.md  pyproject.toml
dalaran/: collator.py  dataset.py  datastructures.py  files.py  message.py  model_type.py  template.py  tokenizer.py  utils.py
dalaran/single_device_train/: __init__.py  loss_tracker.py  prepare.py  train.py
scripts/: sft_qwen.py
