[tool.poetry]
name = "dalaran"
version = "0.1.0"
description = ""
authors = ["wangyuxin <wangyuxin@mokahr.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.1"
docstring-parser = "^0.16"
pydantic-init = "^0.1.0"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
